// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index calls node with the script path and args 1`] = `node <PROJECT_ROOT>/src/scripts/test.ts --no-watch`;

exports[`index errors out when using the wrong node version 1`] = `You must use Node version 10 or greater`;

exports[`index handles SIGKILL 1`] = `
Array [
  Array [
    The script "test" failed because the process exited too early.
This probably means the system ran out of memory or someone called \`kill -9\` on the process.,
  ],
]
`;

exports[`index handles SIGTERM 1`] = `
Array [
  Array [
    The script "test" failed because the process exited too early.
Someone might have called \`kill\` or \`killall\`, or the system could be shutting down.,
  ],
]
`;

exports[`index logs help with no args 1`] = `
Array [
  Array [
    
Usage: ../ [script] [--flags]
Available Scripts:
build --bundle: Build your ES6 files into a single file using RollupJS
build: Build your ES6 files using BabelJS
lint: Lint your JS files using ESLint
stylelint: Lint your CSS/SCSS/SASS files using Stylelint
format: Format your JS files using Prettier
test: Test your JS files using Jest
Options:
  All options depend on the script. The args you pass will be forwarded to the respective tool that's being run under the hood.
,
  ],
]
`;

exports[`index throws unknown script 1`] = `Unknown script unknown-script. Please check if you need to update frontwerk.`;
